--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,36 @@
             android:hint="Name"
             android:inputType="text"
 
-            android:text="" />
+            android:text=""
+            android:layout_marginRight="10dp" />
 
 
 
     </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            >
+
+            <EditText
+                android:id="@+id/editMobilePhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:alpha="0.8"
+                android:ems="10"
+                android:hint="Mobile Phone"
+                android:inputType="numberDecimal"
+                android:text="" />
+
+
+        </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -58,7 +83,8 @@
             android:hint="Name Of Football Field"
             android:inputType="text"
 
-            android:text="" />
+            android:text=""
+            android:layout_marginRight="10dp" />
 
 
 
@@ -83,7 +109,8 @@
             android:hint="Address"
             android:inputType="text"
 
-            android:text="" />
+            android:text=""
+            android:layout_marginRight="10dp" />
 
 
 
@@ -107,7 +134,8 @@
             android:ems="10"
             android:hint="Cost/hour"
             android:inputType="numberDecimal"
-            android:text="" />
+            android:text=""
+            android:layout_marginRight="10dp" />
 
     </android.support.design.widget.TextInputLayout>
 
@@ -118,7 +146,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="40dp"
             android:text="Place : "
-            android:textSize="15sp" />
+            android:textSize="15sp"
+            android:layout_marginLeft="20dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -144,12 +173,13 @@
 
 
         <Button
+            android:id="@+id/save"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Save"
-            android:id="@+id/save"
             android:layout_marginStart="150dp"
-            android:layout_marginTop="40dp"/>
+            android:layout_marginLeft="150dp"
+            android:layout_marginTop="10dp"
+            android:text="Save" />
 
 
     </LinearLayout>
