--- a/app/src/main/res/layout/prospectowners.xml
+++ b/app/src/main/res/layout/prospectowners.xml
@@ -1,45 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical">
 
-    >
-
-    <View
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="?android:attr/selectableItemBackground" />
+        android:layout_gravity="center"
+        android:layout_margin="@dimen/card_margin"
+        android:elevation="3dp">
 
-    <Button
+
+        <Button
         android:id="@+id/reserve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/text_container"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:text="E7gzly" />
+            android:layout_below="@+id/cost"
+            android:layout_marginStart="230dp"
+            android:layout_marginLeft="270dp"
+            android:layout_marginTop="50dp"
+            android:text="E7gzly"
+            android:textSize="15dp" />
 
-    <RelativeLayout
-        android:id="@+id/text_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingLeft="16dp">
 
         <TextView
             android:id="@+id/fieldName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-
-            android:textStyle="bold" />
+            android:textColor="@android:color/black"
+            android:textStyle="bold"
+            tools:text="" />
 
         <TextView
             android:id="@+id/nameowner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/fieldName"
+            android:layout_marginTop="10dp"
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:text=""
@@ -51,6 +53,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/nameowner"
+            android:layout_marginTop="20dp"
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:textColor="@android:color/black"
@@ -61,6 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/mobileowner"
+            android:layout_marginTop="30dp"
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:textColor="@android:color/black"
@@ -71,10 +75,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/address"
+            android:layout_marginTop="40dp"
             android:layout_marginStart="50dp"
             android:layout_marginLeft="50dp"
             android:textColor="@android:color/black"
             tools:text="" />
+    </android.support.v7.widget.CardView>
 
-    </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
