--- a/app/src/main/res/layout/prospectowners.xml
+++ b/app/src/main/res/layout/prospectowners.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/L1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/fieldName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="@android:color/black"
+        android:textSize="12sp"
         android:textStyle="bold"
-        tools:text="" />
+         />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/nameowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,10 +26,11 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:text=""
+        android:textSize="12sp"
         android:textColor="@android:color/black"
-        tools:text="" />
+        />
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/mobileowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -37,9 +39,11 @@
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
         android:textColor="@android:color/black"
-        tools:text="" />
+        android:textSize="12sp"
 
-    <TextView
+        />
+
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,10 +51,12 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
-        android:textColor="@android:color/black"
-        tools:text="" />
+        android:textSize="12sp"
 
-    <TextView
+        android:textColor="@android:color/black"
+         />
+
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -58,14 +64,17 @@
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
-        android:textColor="@android:color/black"
-        tools:text="" />
+        android:textSize="12sp"
 
-    <Button
+        android:textColor="@android:color/black"
+         />
+
+    <android.support.v7.widget.AppCompatButton
         android:id="@+id/reserve"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
             android:layout_below="@+id/cost"
+        android:onClick="reserve"
             android:layout_marginStart="230dp"
             android:layout_marginLeft="270dp"
             android:layout_marginTop="10dp"
