--- a/app/src/main/res/layout/prospectowner_listview.xml
+++ b/app/src/main/res/layout/prospectowner_listview.xml
@@ -12,6 +12,8 @@
     <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/list"
     android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        tools:layout="@layout/prospectowners"
+        />
 
 </LinearLayout>
