--- a/app/src/main/res/layout/prospectowners.xml
+++ b/app/src/main/res/layout/prospectowners.xml
@@ -8,7 +8,7 @@
 
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/fieldName"
+        android:id="@+id/fieldNameowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
@@ -21,7 +21,7 @@
         android:id="@+id/nameowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/fieldName"
+        android:layout_below="@id/fieldNameowner"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
@@ -44,7 +44,7 @@
         />
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/address"
+        android:id="@+id/addressowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/mobileowner"
@@ -57,10 +57,10 @@
          />
 
     <android.support.v7.widget.AppCompatTextView
-        android:id="@+id/cost"
+        android:id="@+id/costowner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/address"
+        android:layout_below="@id/addressowner"
         android:layout_marginStart="50dp"
         android:layout_marginLeft="50dp"
         android:layout_marginTop="10dp"
