--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -30,7 +30,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="0.1"></LinearLayout>
+            android:layout_weight="0.1">
+
+        </LinearLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -42,9 +44,18 @@
             android:hint="Name"
             android:inputType="textPersonName"
             android:text=""
-            android:id="@+id/editName"
             >
+            <EditText
+                android:id="@+id/Name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.8"
+                android:ems="10"
+                android:hint="Name"
+                android:inputType="text"
+                android:text=""
 
+                />
         </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
@@ -55,12 +66,12 @@
 
             >
         <EditText
-            android:id="@+id/editEmail"
+            android:id="@+id/UserName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:alpha="0.8"
             android:ems="10"
-            android:hint="Name"
+            android:hint="UserName"
             android:inputType="text"
             android:text=""
 
@@ -75,18 +86,38 @@
 
             >
             <EditText
-                android:id="@+id/editPassword"
+                android:id="@+id/Password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:alpha="0.8"
                 android:ems="10"
-                android:hint="Mobile Phone"
-                android:inputType="number"
+                android:hint="Password"
+                android:inputType="textPassword"
                 android:text=""
 
                 />
         </android.support.design.widget.TextInputLayout>
 
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+
+            >
+            <EditText
+                android:id="@+id/Mobile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:alpha="0.8"
+                android:ems="10"
+                android:hint="Mobile"
+                android:inputType="text"
+                android:text=""
+
+                />
+        </android.support.design.widget.TextInputLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
