--- a/app/src/main/res/layout/activity_splash_arabic.xml
+++ b/app/src/main/res/layout/activity_splash_arabic.xml
@@ -2,13 +2,13 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/join_community_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     >
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
@@ -58,29 +58,17 @@
             android:theme="@android:style/ButtonBar" />
 
         <Button
-            android:id="@+id/button3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="4dp"
-            android:layout_marginBottom="5dp"
-            android:text="تصفح كضيف"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="16sp" />
-
-        <Button
             android:id="@+id/button4"
             android:layout_width="34dp"
             android:layout_height="35dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="60dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="18dp"
             android:background="@drawable/circle"
             android:padding="6dp"
-            android:paddingStart="7dp"
             android:paddingBottom="7dp"
+            android:paddingStart="7dp"
             android:text="En"
             android:textColor="@color/common_google_signin_btn_text_dark_default"
             android:textSize="18sp" />
