--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -52,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/textView3"
@@ -64,15 +64,14 @@
             android:layout_marginLeft="20dp"
             android:textSize="15sp" />
 
-        <CalendarView
-            android:layout_width="wrap_content"
+        <Button
+            android:id="@+id/chooseDate"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="100dp"
-            android:id="@+id/calendar"
             android:layout_marginLeft="100dp"
-            android:layout_marginTop="20dp">
-
-        </CalendarView>
+            android:layout_marginTop="15dp"
+            android:text="@string/choose_date"/>
     </LinearLayout>
 
 
@@ -154,7 +153,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:text="Search"
+        android:text="@string/search"
         android:id="@+id/search"
         android:layout_marginLeft="150dp"
         android:textSize="15sp" />
