--- a/app/src/main/res/layout/ownerprofile.xml
+++ b/app/src/main/res/layout/ownerprofile.xml
@@ -180,8 +180,13 @@
 
         </LinearLayout>
 
-
-
+        <Button
+            android:id="@+id/logOut"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Logout"
+            android:layout_marginStart="200dp"
+            android:layout_marginLeft="200dp" />
 
     </LinearLayout>
 
