--- a/app/src/main/res/layout/prospectowner_listview.xml
+++ b/app/src/main/res/layout/prospectowner_listview.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/tools">
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.android.e7gzlykora.views.prospectowner_listview" />
+    </data>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
@@ -17,3 +25,4 @@
         />
 
 </LinearLayout>
+</layout>
