--- a/app/src/main/res/layout/activity_identity.xml
+++ b/app/src/main/res/layout/activity_identity.xml
@@ -1,65 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    <layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:bind="http://schemas.android.com/tools">
+    <data>
 
-    android:id="@+id/join_community_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        <variable
+            name="viewModel"
+            type="com.example.android.e7gzlykora.views.identity" />
+    </data>
+    <android.support.v4.widget.DrawerLayout
+        android:id="@+id/join_community_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true"
-        android:orientation="vertical">
+        android:fitsSystemWindows="true">
 
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/splash_screen"/>
-
-        <Button
-            android:id="@+id/button"
-            android:layout_width="102dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="45dp"
-            android:layout_marginBottom="31dp"
-            android:background="@drawable/footballer_button"
-            android:paddingStart="25dp"
-            android:paddingEnd="5dp"
-            android:text="Owner"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="18sp"
-            android:textStyle="italic"
-            android:theme="@android:style/ButtonBar" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="101dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="233dp"
-            android:layout_marginBottom="29dp"
-            android:autoText="false"
-            android:background="@drawable/footballer_button"
-            android:padding="0dp"
-            android:paddingStart="25dp"
-            android:paddingEnd="5dp"
-            android:text="Player"
-            android:textColor="@color/common_google_signin_btn_text_dark_default"
-            android:textSize="18sp"
-            android:textStyle="italic"
-            android:theme="@android:style/ButtonBar" />
-
-
-    </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
+</layout>
