--- a/app/src/main/res/layout/activity_register_layout_owner.xml
+++ b/app/src/main/res/layout/activity_register_layout_owner.xml
@@ -1,4 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:bind="http://schemas.android.com/tools">
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.example.android.e7gzlykora.views.RegisterOwner" />
+    </data>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -167,3 +175,4 @@
         </LinearLayout>
     </LinearLayout>
 </android.support.v4.widget.DrawerLayout>
+</layout>
