--- a/app/src/main/res/layout/activity_identity.xml
+++ b/app/src/main/res/layout/activity_identity.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
@@ -13,5 +12,69 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical">
+
+            <Image
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="0dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="0dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/splash_screen" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/owner_btn"
+                android:layout_width="102dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="45dp"
+                android:layout_marginRight="45dp"
+                android:layout_marginBottom="31dp"
+                android:background="@drawable/footballer_button"
+                android:paddingStart="25dp"
+                android:paddingLeft="25dp"
+                android:paddingEnd="5dp"
+                android:paddingRight="5dp"
+                android:text="Owner"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                android:theme="@android:style/ButtonBar" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/player_btn"
+                android:layout_width="101dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="233dp"
+                android:layout_marginRight="233dp"
+                android:layout_marginBottom="29dp"
+                android:autoText="false"
+                android:background="@drawable/footballer_button"
+                android:padding="0dp"
+                android:paddingStart="25dp"
+                android:paddingLeft="25dp"
+                android:paddingEnd="5dp"
+                android:paddingRight="5dp"
+                android:text="Player"
+                android:textColor="@color/common_google_signin_btn_text_dark_default"
+                android:textSize="18sp"
+                android:textStyle="italic"
+                android:theme="@android:style/ButtonBar" />
+
+
+        </RelativeLayout>
 </android.support.v4.widget.DrawerLayout>
 </layout>
