--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
@@ -124,7 +123,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"/>
-            <Button
+
+            <com.google.android.material.button.MaterialButton
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
@@ -153,7 +153,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"/>
-            <Button
+
+            <com.google.android.material.button.MaterialButton
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
