--- a/app/src/main/res/layout/activity_register_layout.xml
+++ b/app/src/main/res/layout/activity_register_layout.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
     <data>
 
         <variable
@@ -136,7 +135,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"/>
-            <Button
+
+            <com.google.android.material.button.MaterialButton
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
@@ -166,7 +166,8 @@
                 android:layout_width="0dp"
                 android:layout_weight="0.25"
                 android:layout_height="match_parent"/>
-            <Button
+
+            <com.google.android.material.button.MaterialButton
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="match_parent"
